--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.7
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.5
+django-crispy-forms==1.9.0
 pkg-resources==0.0.0
 python-decouple==3.3
 pytz==2019.3
