--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.5
 django-crispy-forms==1.9.0
+psycopg2-binary==2.8.5
 python-decouple==3.3
 pytz==2019.3
 sqlparse==0.3.1
 static3==0.7.0
-gunicorn==20.0.4
-psycopg2==2.7.4
+whitenoise==5.0.1
