--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.5
+django-cors-headers==3.2.1
 django-crispy-forms==1.9.0
+idna==2.9
+Pillow==7.1.1
+pkg-resources==0.0.0
 psycopg2-binary==2.8.5
 python-decouple==3.3
 pytz==2019.3
+requests==2.23.0
 sqlparse==0.3.1
 static3==0.7.0
+urllib3==1.25.9
 whitenoise==5.0.1
-gunicorn==19.0.0
